--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -1,12 +1,13 @@
-<h1>Sources</h1>
+<h2 style="color:red;"><%= flash[:error] %></h2>
 <% @sources.each do |source| %>
+  <h1>Source</h1>
   <div>Name: <%= source.name %></div>
   <div>URL: <%= source.url %></div>
   <div>Synchronization date: <%= source.sync_date %></div>
-  <div><%= link_to 'Sync posts', sync_posts_source_path(source) %></div>
-  <div><%= link_to 'Sync comments', sync_comments_source_path(source) %></div>
+  <div><%= link_to 'Synchronize posts', sync_posts_source_path(source) %></div>
+  <div><%= link_to 'Synchronize comments', sync_comments_source_path(source) %></div>
   <h2>Posts:</h2>
-  <% source.posts do |post| %>
+  <% source.posts.each do |post| %>
     <div>Title: <%= post.title %></div>
     <div>Author: <%= post.author %></div>
   <% end %>
