--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -1,15 +1,29 @@
-<h2 style="color:red;"><%= flash[:error] %></h2>
+<p style="color:red; font-size:36px;"><%= flash[:error] %></p>
 <% @sources.each do |source| %>
-  <h1>Source</h1>
-  <div>Name: <%= source.name %></div>
-  <div>URL: <%= source.url %></div>
-  <div>Synchronization date: <%= source.sync_date %></div>
-  <div><%= link_to 'Synchronize posts', sync_posts_source_path(source) %></div>
-  <div><%= link_to 'Synchronize comments', sync_comments_source_path(source) %></div>
-  <h2>Posts:</h2>
-  <% source.posts.each do |post| %>
-    <div>Title: <%= post.title %></div>
-    <div>Author: <%= post.author %></div>
-  <% end %>
-  -----------------------------
+  <p style="font-size:30px;"><b>Name:</b> <%= source.name %></p>
+  <p style="font-size:30px;"><b>URL:</b> <%= source.url %></p>
+  <p><%= button_to 'Synchronize posts', sync_posts_source_path(source), method: :get %></p>
+  <p><%= button_to 'Synchronize comments', sync_comments_source_path(source), method: :get %></p>
+  <p style="font-size:30px;"><b>Posts:</b></p>
+  <table style="margin-left: 70px;">
+    <thead>
+    <tr>
+      <td width="200px" style="font-size:24px"><b>Title:</b>
+      </td><td width="200px" style="font-size:24px"><b>Author:</b></td>
+      <td width="300px" style="font-size:24px"><b>Synchronization date:</b></td>
+    </tr>
+    </thead>
+    <tbody>
+    <% source.posts.each do |post| %>
+      <tr>
+        <td width="200px" style="font-size:24px"><%= link_to post.title, source_post_path(source, post) %></td>
+        <td width="200px" style="font-size:24px"><%= post.author %></td>
+        <td width="300px" style="font-size:24px"><time><%= post.humanized_date_time %></time></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <p style="font-size:50px;"></p>
+  <p style="border-bottom: 2px solid #cccccc;"></p>
+  <p style="font-size:50px;"></p>
 <% end %>
