Added logic for show view of PostsController

--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -10,7 +10,7 @@
     <tr>
       <td width="200px" style="font-size:24px"><b>Title:</b>
       </td><td width="200px" style="font-size:24px"><b>Author:</b></td>
-      <td width="300px" style="font-size:24px"><b>Synchronization date:</b></td>
+      <td width="300px" style="font-size:24px"><b>Synchronized at:</b></td>
     </tr>
     </thead>
     <tbody>
