--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,11 +3,11 @@
 <p style="font-size:30px;"><b>Author:</b> <%= @post.author %></p>
 <p style="font-size:30px;"><b>Synchronized at:</b> <time><%= @post.humanized_date_time %></time></p>
 <p><%= button_to 'Synchronize comments', sync_comments_source_post_path(@post.source_id, @post), method: :get %></p>
-<p style="font-size:30px;"><b>Body:</b></p>
+<p style="font-size:30px;"><b>Text:</b></p>
 <p style="font-size:26px; margin-left: 80px"><%= @post.body %></p>
 <p style="font-size:30px"><b>Comments:</b></p>
 <% @post.comments.each do |comment| %>
   <p style="font-size:24px;margin-left: 80px"><b>Author:</b> <%= comment.author %></p>
-  <p style="font-size:24px;margin-left: 80px"><b>Body:</b> <%= comment.body %></p>
+  <p style="font-size:24px;margin-left: 80px"><b>Text:</b> <%= comment.body %></p>
   <p style="font-size: 50px"></p>
 <% end %>
